--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -87,7 +87,38 @@
         </section>
 
         <section>
-            <h2 class="fragment">Nobody cares if it’s your code or the library you used</h2>
+            <h2>Developers Smalltalk?</h2>
+
+            <img src="img/familiada.png"/>
+
+        </section>
+
+        <section>
+            <h2>Frameworks vs Libraries</h2>
+        </section>
+
+        <section>
+            <h2>Frameworks</h2>
+
+            <ul>
+                <li>Take time to learn and outdate quickly</li>
+                <li>Own you</li>
+                <li>Increase complexity/weight</li>
+                <li>Force you to keep up</li>
+                <li>Require expert help</li>
+                <li>Probably provide more than you need</li>
+            </ul>
+        </section>
+
+        <section>
+            <h1>Frameworks</h1>
+            <h2 class="fragment">Take time to learn and outdate quickly</h2>
+            <h2 class="fragment">Own you</h2>
+            <h2 class="fragment">Increase complexity/weight</h2>
+            <h2 class="fragment">Go out of fashion/get abandoned</h2>
+            <h2 class="fragment">Force you to keep up</h2>
+            <h2 class="fragment">Require expert help</h2>
+            <h2 class="fragment">Probably provide more than you need</h2>
         </section>
 
         <section>
@@ -116,6 +147,17 @@
         </section>
 
         <section>
+            <blockquote>
+                Using common sense is the ultimate Best Practice™.
+            </blockquote>
+
+            <blockquote class="fragment">
+                Nobody cares if it’s your code or the library you used
+            </blockquote>
+
+        </section>
+
+        <section>
             <!--
             Of course when frameworks are working out, then they are just the bees knees. Well, until one day the framework is no longer the cool kid on the block. The community starts to fade. A couple years down the road, colleagues look askance because of a code base that is on a has-been framework.
             Not that big of a problem when doing microservices right
@@ -140,7 +182,6 @@
 
 
             -->
-            <h2>Key takeaways:</h2>
         </section>
 
         <section>
