--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -173,6 +173,21 @@
         </section>
 
         <section>
+            <h2>- Wouldn't you like to focus on solving real problems and let framework authors do the boring parts?</h2>
+            <h2 class="fragment">- Of course! but...</h2>
+            <div class="fragment">
+                <blockquote>"All non-trivial abstractions, to some degree, are leaky."</blockquote>
+                <small>https://www.joelonsoftware.com/2002/11/11/the-law-of-leaky-abstractions/</small>
+            </div>
+        </section>
+
+
+        <section>
+            <h2>for example, ORM</h2>
+            <small>Hibernate</small>
+        </section>
+
+        <section>
             <img src="img/orm.png"/>
             <h4><a href="https://twitter.com/lukaseder/status/1051858654989836288">https://twitter.com/lukaseder/status/1051858654989836288</a></h4>
 
