Add intro slide

--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -61,7 +61,15 @@
 
         <section>
             <h1>Fantastic Frameworks</h1>
-            <h3>...and How/Why to Avoid Them</h3>
+            <h3>...and How to Avoid Them</h3>
+            <br>
+            <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
+            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+        </section>
+
+        <section>
+            <h1>Fantastic Frameworks</h1>
+            <h3>...and How/Why/If to Avoid Them</h3>
             <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
