--- a/talks/wip/fantastic-frameworks/index.html
+++ b/talks/wip/fantastic-frameworks/index.html
@@ -292,7 +292,7 @@
         </section>
 
         <section>
-            <h2>ORM as plugin</h2>
+            <h2>ORM as plugin, kept separate from domain</h2>
 
             <pre><code data-trim="" style="font-size: 0.8em;line-height: 0.9; max-height: 90%">
                 package com.casumo.domain;
