--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -188,6 +188,8 @@
                 <blockquote>"All non-trivial abstractions, to some degree, are leaky."</blockquote>
                 <small>https://www.joelonsoftware.com/2002/11/11/the-law-of-leaky-abstractions/</small>
             </div>
+            <h3 class="fragment">So you spend time learning someone's abstraction and not basics</h3>
+
         </section>
 
 
