--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -105,12 +105,6 @@
 
         <section>
             <h1>I. Invasive Frameworks</h1>
-            <div class="fragment">
-                <h2>What's an invasive framework?
-                </h2>
-                <ul>
-                </ul>
-            </div>
         </section>
 
         <section>
@@ -135,10 +129,6 @@
         </section>
 
         <section>
-            *examples of bold promises from java world*
-        </section>
-
-        <section>
             <h2>Meanwhile in Scala ecosystem...</h2>
             <br>
             <blockquote>
@@ -160,6 +150,11 @@
             <h2>Frameworks</h2>
 
             <blockquote>Puts work into a frame</blockquote>
+            <img src="img/framework1.png" width="15%"/>
+            <br>
+
+            <small>http://tomasp.net/blog/2015/library-frameworks/</small>
+
         </section>
 
         <section>
